--- a/src/styles/sass/variables.scss
+++ b/src/styles/sass/variables.scss
@@ -19,6 +19,7 @@ $primary-color: #AED7A0;
 
 //General
 $border-elements:#FFFFFF;
+$extra-box-height:300px;
 
 // Layout
 $margin: 1rem;
